Close webservice and loader streams